--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "rollup": "^2.38.4",
+    "rollup": "^2.50.4",
     "styled-components": "^5.2.0",
     "themeprovider-storybook": "^1.6.4",
     "ts-jest": "^26.5.0",
@@ -79,6 +79,7 @@
     "@types/lodash": "^4.14.162",
     "@types/styled-system": "^5.1.10",
     "lodash": "^4.17.20",
+    "react-icons": "^4.2.0",
     "react-transition-group": "^4.4.1",
     "styled-system": "^5.1.5"
   }
